fix/class 12: fixed navbar not covering 100% page width

--- a/classes/R_12/pageNoticias/src/App.css
+++ b/classes/R_12/pageNoticias/src/App.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
-
+#root{
+  width: 100vw;
+}
 main {
   max-width: 1280px;
   margin: 0 auto;
